--- a/ex-21.html
+++ b/ex-21.html
@@ -14,7 +14,7 @@
         />
     </head>
     <body>
-        <h1>Notes</h1>
+        <h1>Semant Elements</h1>
         <p>
             How much does semantic HTML improves the foundation of any web page?
         </p>
